# E1.12_homework

./: README.md  pyproject.toml
gallows_game/: game.py  main.py
tests/: test_game.py
